<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="text_hide_hour24">88:88</string>
    <string name="text_hide_second">88</string>
    <string name="settings_alarms">Alarms</string>
    <string name="settings_timer">Sleep Timer</string>
    <string name="settings_weather">Weather</string>
    <string name="settings_display">Display</string>
    <string name="settings_advanced">Advanced</string>
    <string name="title_settings">Settings</string>
    <string name="title_repeat">Repeat</string>
    <string name="title_sleep_timer">Sleep Timer</string>
    <string name="title_display">Display</string>
    <string name="title_advanced">Display</string>
    <string name="clock_digital_blue">Digital Blue</string>
    <string name="clock_digital_green">Digital Green</string>
    <string name="clock_digital_red">Digital Red</string>
    <string name="clock_digital_yellow">Digital Yellow</string>
    <string name="clock_digital_white">Digital White</string>
    <string name="clock_analog">Thinline</string>
    <string name="every_monday">Every Monday</string>
    <string name="every_tuesday">Every Tuesday</string>
    <string name="every_wednesday">Every Wednesday</string>
    <string name="every_thursday">Every Thursday</string>
    <string name="every_friday">Every Friday</string>
    <string name="every_saturday">Every Saturday</string>
    <string name="every_sunday">Every Sunday</string>
    <string name="everyday">Everyday</string>
    <string name="sample_day">Mon, Tue, Wed, Thu, Fri, Sat, Sun</string>
    <string name="add_alarm">add alarm</string>
    <string name="alarms">Alarms</string>
    <string name="sample_note">Good morning everyone, my name is AlarmClockFree</string>
    <string name="delete_multiple_alarms">Delete multiple alarms</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="delete_selected">delete selected</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_delete_all_alarms">Delete all alarms</string>
    <string name="message_delete_all_alarms">Are you sure you want to delete all alarms?</string>
    <string name="data_empty">There is no alarm</string>
    <string name="clock_analog_100x100">100x100 Analog</string>
    <string name="sample_time">08:00</string>
    <string name="repeat">Repeat</string>
    <string name="sample_repeat">Everyday</string>
    <string name="sound_and_music"><![CDATA[Sound & Music]]></string>
    <string name="sample_sound">Bells</string>
    <string name="vibration">Vibration</string>
    <string name="fade_in">Fade in</string>
    <string name="sample_fade_in">Gently increases alarm volume</string>
    <string name="snooze">Snooze Duration</string>
    <string name="sample_snooze_duration">10 minutes</string>
    <string name="note">Note</string>
    <string name="save_new_alarm">Save new alarm</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="volume">Volume</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="snooze_never">Never</string>
    <string name="snooze_five_minutes">5 minutes</string>
    <string name="snooze_ten_minutes">10 minutes</string>
    <string name="snooze_fifteen_minutes">15 minutes</string>
    <string name="snooze_twenty_minutes">20 minutes</string>
    <string name="snooze_twenty_five_minutes">25 minutes</string>
    <string name="snooze_thirty_minutes">30 minutes</string>
    <string name="snooze_duration">Snooze Duration</string>
    <string name="timer_sleep_default">0:15</string>
    <string name="timer_sleep_white_noise">White Noise</string>
    <string name="timer_sleep_sound_music">Sound &amp; Music</string>
    <string name="timer_sleep_sound_music_chose_default">No track is selected</string>
    <string name="timer_sleep_shuffle_music">Shuffle Music</string>
    <string name="timer_sleep_start">Start</string>
    <string name="timer_sleep_stop">Stop</string>
    <string name="text_show_seconds">Show Seconds</string>
    <string name="text_show_day">Show Day</string>
    <string name="text_use_24_hour_format">Use 24-hour Format</string>
    <string name="text_slide_fingers">Slide Fingers</string>
    <string name="text_adjust_the_brightness">Adjust the Brightness</string>
    <string name="sound_bells">Bells</string>
    <string name="sound_old_alarm_clock">Old Alarm Clock</string>
    <string name="sound_digital">Digital</string>
    <string name="sample_music">Good morning.mp3</string>
    <string name="error_play_song">Error, can not play selected file</string>
    <string name="error_parse_time_string">Error when parse time string</string>
    <string name="prompt_need_to_grant_permission">You need to grant permission to use this feature</string>
    <string name="advanced_show_battery_indicator">Show battery indicator</string>
    <string name="advanced_auto_snooze">Auto Snooze</string>
    <string name="advanced_auto_launch">Auto Launch</string>
    <string name="advanced_time_picker_type">TimePicker type</string>
    <string name="advanced_time_picker_type_digital">Digital</string>
    <string name="advanced_time_picker_type_analog">Analog</string>
    <string name="battery">Battery: %1$d%%</string>
    <string name="time_picker_default">%1$02d:%2$02d</string>
    <string name="time_snooze_format">%1$d %2$s</string>
    <string name="sound_mountain">Mountain</string>
    <string name="sound_get_funky">Get Funky</string>
    <string name="sound_good_morning">Good Morning</string>
    <string name="sound_mellows">Mellow</string>
    <string name="sound_electro">Electro</string>
    <string name="sound_future">Future</string>
    <string name="list_songs">Songs</string>
    <string name="sleep_timer_count_down">%1$s (%2$s)</string>
    <string name="update_feature">This feature will be installed in the next version !</string>
    <string name="prompt_there_is_no_song">There is no song !</string>
    <string name="auto_snooze_text">Alarm rings for 30 secs, auto snoozes, and then repeats later,
        if you don\'t interrupt.</string>
</resources>
