<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group_sound"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radio_button_mountain"
            style="@style/item_radio_button"
            android:text="@string/sound_mountain"/>

        <RadioButton
            android:id="@+id/radio_button_old_alarm_clock"
            style="@style/item_radio_button"
            android:text="@string/sound_old_alarm_clock"/>

        <RadioButton
            android:id="@+id/radio_button_digital"
            style="@style/item_radio_button"
            android:text="@string/sound_digital"/>

        <RadioButton
            android:id="@+id/radio_button_bells"
            style="@style/item_radio_button"
            android:text="@string/sound_bells"/>

        <RadioButton
            android:id="@+id/radio_button_get_funky"
            style="@style/item_radio_button"
            android:text="@string/sound_get_funky"/>

        <RadioButton
            android:id="@+id/radio_button_good_morning"
            style="@style/item_radio_button"
            android:text="@string/sound_good_morning"/>

        <RadioButton
            android:id="@+id/radio_button_mellow"
            style="@style/item_radio_button"
            android:text="@string/sound_mellows"/>

        <RadioButton
            android:id="@+id/radio_button_electro"
            style="@style/item_radio_button"
            android:text="@string/sound_electro"/>

        <RadioButton
            android:id="@+id/radio_button_future"
            style="@style/item_radio_button"
            android:text="@string/sound_future"/>
    </RadioGroup>
</ScrollView>