<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_every_monday"
            style="@style/item_checkbox"
            android:text="@string/every_monday"/>

        <CheckBox
            android:id="@+id/checkbox_every_tuesday"
            style="@style/item_checkbox"
            android:text="@string/every_tuesday"/>

        <CheckBox
            android:id="@+id/checkbox_every_wednesday"
            style="@style/item_checkbox"
            android:text="@string/every_wednesday"/>

        <CheckBox
            android:id="@+id/checkbox_every_thursday"
            style="@style/item_checkbox"
            android:text="@string/every_thursday"/>

        <CheckBox
            android:id="@+id/checkbox_every_friday"
            style="@style/item_checkbox"
            android:text="@string/every_friday"/>

        <CheckBox
            android:id="@+id/checkbox_every_saturday"
            style="@style/item_checkbox"
            android:text="@string/every_saturday"/>

        <CheckBox
            android:id="@+id/checkbox_every_sunday"
            style="@style/item_checkbox"
            android:text="@string/every_sunday"/>

        <CheckBox
            android:id="@+id/checkbox_everyday"
            style="@style/item_checkbox"
            android:text="@string/everyday"/>
    </LinearLayout>

</ScrollView>