<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">

    <RadioGroup
        android:id="@+id/radio_group_snooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_five_minutes"
            style="@style/snooze_item_radio_button"
            android:text="@string/snooze_five_minutes"/>

        <RadioButton
            android:id="@+id/radio_button_ten_minutes"
            style="@style/snooze_item_radio_button"
            android:text="@string/snooze_ten_minutes"/>

        <RadioButton
            android:id="@+id/radio_button_fifteen_minutes"
            style="@style/snooze_item_radio_button"
            android:text="@string/snooze_fifteen_minutes"/>

        <RadioButton
            android:id="@+id/radio_button_twenty_minutes"
            style="@style/snooze_item_radio_button"
            android:text="@string/snooze_twenty_minutes"/>

        <RadioButton
            android:id="@+id/radio_button_twenty_five_minutes"
            style="@style/snooze_item_radio_button"
            android:text="@string/snooze_twenty_five_minutes"/>

        <RadioButton
            android:id="@+id/radio_button_thirty_minutes"
            style="@style/snooze_item_radio_button"
            android:text="@string/snooze_thirty_minutes"/>

        <RadioButton
            android:id="@+id/radio_button_never"
            style="@style/snooze_item_radio_button"
            android:text="@string/snooze_never"/>
    </RadioGroup>
</ScrollView>