<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb_show_seconds"
            style="@style/item_checkbox"
            android:text="@string/text_show_seconds"/>

        <CheckBox
            android:id="@+id/cb_show_day"
            style="@style/item_checkbox"
            android:text="@string/text_show_day"/>

        <CheckBox
            android:id="@+id/cb_use_24_hour_format"
            style="@style/item_checkbox"
            android:text="@string/text_use_24_hour_format"/>

        <CheckBox
            android:id="@+id/cb_text_slide_fingers"
            style="@style/item_checkbox"
            android:text="@string/text_slide_fingers"/>

        <TextView
            style="@style/text_view_display"
            android:text="@string/text_adjust_the_brightness"/>
    </LinearLayout>
</ScrollView>