<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_line_break"/>

        <CheckBox
            android:id="@+id/checkbox_auto_launch"
            style="@style/item_checkbox"
            android:text="@string/advanced_auto_launch"/>

        <include layout="@layout/layout_line_break"/>

        <CheckBox
            android:id="@+id/checkbox_show_battery_indicator"
            style="@style/item_checkbox"
            android:text="@string/advanced_show_battery_indicator"/>

        <include layout="@layout/layout_line_break"/>

        <CheckBox
            android:id="@+id/checkbox_auto_snooze"
            style="@style/item_checkbox"
            android:text="@string/advanced_auto_snooze"/>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_view_advanced"
                android:text="@string/advanced_time_picker_type"
                android:textSize="@dimen/item_checkbox_text_size"/>

            <TextView
                android:id="@+id/text_time_picker"
                style="@style/text_view_advanced"
                android:text="@string/advanced_time_picker_type_digital"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>
    </LinearLayout>
</ScrollView>