<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_alarm_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/alarm_detail_text_time_padding_top"
                android:paddingTop="@dimen/alarm_detail_text_time_padding_top"
                android:text="@string/sample_time"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alarm_detail_time_text_size"/>

            <LinearLayout
                android:id="@+id/linear_layout_repeat"
                style="@style/AlarmDetailItemVerticalLinearLayout">

                <TextView
                    android:id="@+id/text_view_repeat_title"
                    style="@style/AlarmDetailItemTextViewTitle"
                    android:text="@string/repeate"/>

                <TextView
                    android:id="@+id/text_view_repeat_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_repeat"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_sound"
                style="@style/AlarmDetailItemVerticalLinearLayout">

                <TextView
                    android:id="@+id/text_view_sound_title"
                    style="@style/AlarmDetailItemTextViewTitle"
                    android:text="@string/sound_and_music"/>

                <TextView
                    android:id="@+id/text_view_sound_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_sound"/>
            </LinearLayout>

            <LinearLayout
                style="@style/AlarmDetailItemVerticalLinearLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/image_view_volume_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_volume"/>


                    <SeekBar
                        android:id="@+id/seek_bar_volume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_weight="1"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/text_view_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"/>
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/relative_layout_vibration"
                style="@style/AlarmDetailItemLayout">

                <TextView
                    android:id="@+id/text_view_vibration_title"
                    style="@style/AlarmDetailItemTextViewTitle"
                    android:layout_centerVertical="true"
                    android:text="@string/vibration"/>

                <CheckBox
                    android:id="@+id/checkbox_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_fade_in"
                style="@style/AlarmDetailItemLayout">

                <TextView
                    android:id="@+id/text_view_fade_in_title"
                    style="@style/AlarmDetailItemTextViewTitle"
                    android:text="@string/fade_in"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_fade_in_title"
                    android:text="@string/sample_fade_in"/>

                <CheckBox
                    android:id="@+id/checkbox_fade_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_layout_snooze"
                style="@style/AlarmDetailItemVerticalLinearLayout">

                <TextView
                    android:id="@+id/text_view_snooze_title"
                    style="@style/AlarmDetailItemTextViewTitle"
                    android:text="@string/snooze"/>

                <TextView
                    android:id="@+id/text_view_snooze_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_snooze_duration"/>
            </LinearLayout>

            <LinearLayout
                style="@style/AlarmDetailItemHorizontalLinearLayout">

                <TextView
                    android:id="@+id/text_view_note_title"
                    style="@style/AlarmDetailItemTextViewTitle"
                    android:text="@string/note"/>

                <EditText
                    android:id="@+id/edit_text_note_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:descendantFocusability="beforeDescendants"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_save_new_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_new_alarm"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_save_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>