<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/layout_black"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            style="@style/layout_w_h_match_wrap_padding"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/text_timer_sleep"
                style="@style/text_sleep_timer"
                android:text="@string/sample_time"/>

            <LinearLayout
                style="@style/layout_w_h_match_wrap_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_small"
                    android:src="@drawable/icon_volume"/>

                <SeekBar
                    android:id="@+id/seekBar_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_small"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_noise"
                style="@style/item_checkbox"
                android:text="@string/timer_sleep_white_noise"/>

            <LinearLayout
                android:id="@+id/layout_sound_music"
                style="@style/layout_w_h_match_wrap_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_music_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_sleep_sound_music"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size2_timer_sleep_activity"/>

                <TextView
                    android:id="@+id/text_view_number_selected_songs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_sleep_sound_music_chose_default"
                    android:textSize="@dimen/text_size3_timer_sleep_activity"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_shuffle"
                style="@style/item_checkbox"
                android:text="@string/timer_sleep_shuffle_music"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_timer_sleep"
            style="@style/button_sleep_timer"
            android:text="@string/timer_sleep_start"/>

        <Button
            android:id="@+id/stop_timer_sleep"
            style="@style/button_sleep_timer"
            android:text="@string/timer_sleep_stop"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>