<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_clock_white"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/digital_white_w_150"/>

            <TextView
                style="@style/text_fragment_setting_clocks"
                android:text="@string/clock_digital_white"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_clock_blue"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/digital_blue_w_150"/>

            <TextView
                style="@style/text_fragment_setting_clocks"
                android:text="@string/clock_digital_blue"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_clock_green"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/digital_green_w_150"/>

            <TextView
                style="@style/text_fragment_setting_clocks"
                android:text="@string/clock_digital_green"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_clock_red"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/digital_red_w_150"/>

            <TextView
                style="@style/text_fragment_setting_clocks"
                android:text="@string/clock_digital_red"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_clock_yellow"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/digital_yellow_w_150"/>

            <TextView
                style="@style/text_fragment_setting_clocks"
                android:text="@string/clock_digital_yellow"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_clock_analog"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/analog_w_150"/>

            <TextView
                style="@style/text_fragment_setting_clocks"
                android:text="@string/clock_analog"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>
    </LinearLayout>

</ScrollView>
