<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_alarm"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/bar_icon_alarm"/>

            <TextView
                style="@style/text_fragment_setting_functions_clocks"
                android:text="@string/settings_alarms"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_timer"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/bar_icon_timer"/>

            <TextView
                style="@style/text_fragment_setting_functions_clocks"
                android:text="@string/settings_timer"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_weather"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/bar_icon_weather"/>

            <TextView
                style="@style/text_fragment_setting_functions_clocks"
                android:text="@string/settings_weather"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_display"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/bar_icon_display"/>

            <TextView
                style="@style/text_fragment_setting_functions_clocks"
                android:text="@string/settings_display"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>

        <LinearLayout
            android:id="@+id/layout_advanced"
            style="@style/layout_repeat"
            android:orientation="horizontal">

            <ImageView
                style="@style/image_fragment_setting_clocks"
                android:src="@drawable/bar_icon_advanced"/>

            <TextView
                style="@style/text_fragment_setting_functions_clocks"
                android:text="@string/settings_advanced"/>
        </LinearLayout>

        <include layout="@layout/layout_line_break"/>
    </LinearLayout>
</ScrollView>